# skincare-adventure-game

./: CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc  skincare_game_main.cc
include/core/: constants.h  game.h  game_state.h  player.h  product.h  product_category.h  routine.h  routines.h
include/visualizer/: skincare_game_app.h  skincare_game_canvas.h
src/core/: game.cc  game_state.cc  player.cc  product.cc  product_category.cc  routine.cc  routines.cc
src/resources/: skincare_products.json  test_skincare_products.json
src/visualizer/: skincare_game_app.cc  skincare_game_canvas.cc
tests/: skincare_game_test.cc
